k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
spec:
  selector:
    app: nginx-canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
